Camera with negative scale works only in Cycles Rendered view #63047

Closed
opened 2019-03-28 13:34:47 +01:00 by Maciej Niezgódka · 12 comments

System Information
Operating system: Windows-10-10.0.15063 64 Bits
Graphics card: Quadro K2200/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.78

Blender Version
Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-28 00:40, hash: cd92f8ea46
Worked: (optional)

Short description of error
For composition of render very important is to keep balance between object distribution in scene. To be sure that my composition is right I always check my view mirroring camera (Ctrl+M -> double x). Unfortunately this works OK only in rendering view. Can you fix this, that I'll use it in Solid view too?

mirror_camera_view_error.jpg

1 - Standard Solid camera view
2 - Mirrored Solid camera view
3 - Standard Rendered camera view
4 - Mirrored Rendered camera view

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.15063 64 Bits Graphics card: Quadro K2200/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.78 **Blender Version** Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-28 00:40, hash: `cd92f8ea46` Worked: (optional) **Short description of error** For composition of render very important is to keep balance between object distribution in scene. To be sure that my composition is right I always check my view mirroring camera (Ctrl+M -> double x). Unfortunately this works OK only in rendering view. Can you fix this, that I'll use it in Solid view too? ![mirror_camera_view_error.jpg](https://archive.blender.org/developer/F6894975/mirror_camera_view_error.jpg) 1 - Standard Solid camera view 2 - Mirrored Solid camera view 3 - Standard Rendered camera view 4 - Mirrored Rendered camera view **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]

Added subscriber: @senteria

Added subscriber: @senteria
Sebastian Parborg changed title from Mirror camera works only in Rendered view to Camera with negative scale works only in Cycles Rendered view 2019-03-28 14:08:21 +01:00

Added subscribers: @fclem, @ZedDB

Added subscribers: @fclem, @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-03-28 14:09:14 +01:00

@fclem is this something we could easily support? Known limitation or not?

@fclem is this something we could easily support? Known limitation or not?

This is more of a feature request than a bug report. Putting on low priority.

This is more of a feature request than a bug report. Putting on low priority.

Sorry, but I don't agree with you, because this is how it works correct in Blender 2.7x, so in my opinion this is a bug. This tool is used usually in my workflow.

Sorry, but I don't agree with you, because this is how it works correct in Blender 2.7x, so in my opinion this is a bug. This tool is used usually in my workflow.

Ok will try to fix it. Do note that it was also buggy in 2.7 since backface culling was inverted.

Ok will try to fix it. Do note that it was also buggy in 2.7 since backface culling was inverted.

OK, Sorry, but I didn't know it, because I stopped with Blender 2.77 with Vray additions, and now doing all stuff well with great 2.8. Thank you for changing priority :)

OK, Sorry, but I didn't know it, because I stopped with Blender 2.77 with Vray additions, and now doing all stuff well with great 2.8. Thank you for changing priority :)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

#71352 (Negative scale camera causes BLI_assert) might be related?

#71352 (Negative scale camera causes BLI_assert) might be related?

Hello, I know, that all of developers are very busy, but I would like to ask - any news about fixing it? For me it is very important to check my scene composition with mirrored viewport shot.

Hello, I know, that all of developers are very busy, but I would like to ask - any news about fixing it? For me it is very important to check my scene composition with mirrored viewport shot.
Clément Foucault was unassigned by Dalai Felinto 2019-12-23 16:34:48 +01:00

This issue was referenced by f972a3c314

This issue was referenced by f972a3c31458a7048a6ffb3e26f7d802e3433934

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-02-19 19:37:19 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63047
No description provided.